--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "leaflet.tilelayer.gloperations": "^0.4.0",
     "postcss": "^7.0.35",
     "react": "^17.0.1",
+    "react-colorscales": "^0.7.3",
     "react-dom": "^17.0.1",
     "react-leaflet": "^3.1.0",
     "react-redux": "^7.2.2",
