--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "leaflet.tilelayer.gloperations": "^0.4.0",
     "postcss": "^7.0.35",
     "react": "^17.0.1",
-    "react-colorscales": "^0.7.3",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
+    "typescript": "^4.2.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -44,6 +44,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "homepage": "file:///private/var/cameron/hirdsexplorer/build"
+  }
 }
